--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 
     <!-- Open Graph Meta Tags for better social media sharing -->
     <meta property="og:title" content="DOIDOI | Media Artist" />
-    <meta property="og:description" content="between virtual and real" />
+    <meta property="og:description" content="I want to connect with you." />
     <meta property="og:image" content="https://github.com/o986o/DOIDOI/blob/master/images/logo-link.png?raw=true" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Meta Tags for Twitter preview -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="DOIDOI | Media Artist" />
-    <meta name="twitter:description" content="between virtual and real" />
+    <meta name="twitter:description" content="I want to connect with you." />
     <meta name="twitter:image" content="https://github.com/o986o/DOIDOI/blob/master/images/logo-link.png?raw=true" />
 
     <!-- Meta description to summarize the website's content (important for SEO) -->
     <meta name="description" content="DOIDOI is a Seoul-based media artist exploring unusual sensations in everyday life. Showcasing various artistic works and projects." />
 
     <!-- Keywords for SEO purposes -->
-    <meta name="keywords" content="media artist, Seoul, art, interactive, sensations, projects, DOIDOI" />
+    <meta name="keywords" content="media artist, media art, 미디어 아트, 서울미디어아트, Human Centered Technology, Sensory Expansion, ImmersiveArt, Seoul, interactive art, DOIDOI" />
 
     <!-- Directs search engines to index and follow the website's links -->
     <meta name="robots" content="index, follow" />
@@ -84,7 +84,7 @@
       <div class="info-container">
         <div class="info-section" id="about">
           <h2>about</h2>
-          <p><strong>DOIDOI</strong>  is a Seoul-based media artist who transforms 
+          <p><strong>DOIDOI</strong> is a Seoul-based media artist who transforms 
           unusual elements found in everyday life into visual experiences that stimulate 
           perception and expand the senses. Through this work, DOIDOI aims to 
           open new ways of experiencing our senses.
@@ -108,7 +108,7 @@
           <p><strong>DOIDOI</strong> values life's simple pleasures, enjoying cooking, fitness, and traveling.
           Specializing in interactive projects using Unreal Engine and TouchDesigner, sharing research through a <a href="https://computer-art.tistory.com/"><strong>blog↗</strong></a>. 
           <br><br>
-          Recently, DOIDOI has developed an interest in cognitive science, gastrophysics, and SF.
+          Recently, DOIDOI has developed an interest in cognitive science, gastrophysics, and Sci-Fi universe.
         </p>
         </div>
         </div>
