--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             Feel free to reach out with your ideas.</p>
           <br>
           <p><a href="mailto:doheee0404@gmail.com">email↗</a></p>
-          <p><a href="https://www.instagram.com/d0idoi/">instagram↗</a></p></div>
+          <p><a href="https://www.instagram.com/studio_doidoi/">instagram↗</a></p></div>
         <div class="info-section" id="info">
           <h2>Info</h2>
           <p><strong>DOIDOI</strong> values life's simple pleasures, enjoying cooking, fitness, and traveling.
