--- a/00/scan2taste.html
+++ b/00/scan2taste.html
@@ -105,7 +105,7 @@
         <iframe
           width="100%"
           height="100%"
-          src="https://www.youtube.com/embed/hLyo2a9b4sk?autoplay=1&mute=1&controls=0&rel=0&modestbranding=1&showinfo=0&loop=1&playlist=hLyo2a9b4sk&vq=hd1080"
+          src="https://www.youtube.com/embed/hLyo2a9b4sk"
           frameborder="0"
           allow="autoplay; fullscreen; picture-in-picture"
           allowfullscreen
