--- a/00/scan2taste.html
+++ b/00/scan2taste.html
@@ -7,49 +7,31 @@
     <meta http-equiv="Cache-Control" content="max-age=31536000">
     <title>DOIDOI</title>
   
-    <!-- Preload web fonts -->
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/pretendard@1.3.3/dist/web/pretendard.css?&display=swap" as="style" />
-    <link rel="preload" href="https://api.fontshare.com/css?f[]=clash-display@400,500,600,800&display=swap" as="style" />
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Tilt+Warp&display=swap" as="style" />
-  
-    <!-- Apply font-display swap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretendard@1.3.3/dist/web/pretendard.css?&display=swap" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretendard@1.3.3/dist/web/pretendard.css" />
     <link href="https://api.fontshare.com/css?f[]=clash-display@400,500,600,800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Tilt+Warp&display=swap" rel="stylesheet">
-  
-    <!-- Preconnect for fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  
-    <!-- Other links and styles -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/style-detail.css"> <!-- main stylesheet -->
+    <link rel="stylesheet" href="../styles/style-detail.css">
     <link rel="icon" href="../images/favicon/favicon16.png" sizes="16x16">
-    <link rel="icon" href="../images/favicon/favicon32.png" sizes="32x32">
-    <link rel="icon" href="../images/favicon/favicon48.png" sizes="48x48">
   </head>
   
 <body>
   <div class="container">
-    <!-- Header -->
     <header>
       <div class="container">
         <nav>
           <ul>
             <li class="logo"><a href="#"><img src="../images/doidoi-logo.png" loading="lazy" alt="DOIDOI Logo"></a></li>
             <li class="project"><a href="../index.html">DOIDOI</a></li>
-            <li class="cv"><a href="../index.html"><i class="fa-sharp fa-light fa-x" 
-                style="font-family:'pretendard'; 
-                font-size: 30px; font-weight: 400;
-                color: #666;"></i></a></li>
+            <li class="cv"><a href="../index.html"><i class="fa-sharp fa-light fa-x" style="font-family:'pretendard'; font-size: 30px; font-weight: 400; color: #666;"></i></a></li>
           </ul>
         </nav>
       </div>
     </header>
     
-<!-- Project Section with Dummy Image -->
 <section class="project-details">
-  <!-- 공통적인 부분 -->
   <div class="projdetail-main-image">
     <img src="../images/test/waiting.png" loading="lazy" alt="Dummy Image">
   </div>
@@ -64,33 +46,17 @@
       </p>
     </div>
     <div class="projdetail-description">
-      <!-- Description을 두 열로 나누기 위한 두 개의 p 태그 추가 -->
       <p>
         “Scan 2 Taste” reframes the QR code not as a digital utility, but as a threshold to simulated sensation.
-        Through a code masked in the texture of steak, viewers are invited to experience the pleasure of eating—without food, without substance.
-        What is sensed is not real, yet the mind registers it as such.
-        In this speculative system, nourishment is decoupled from consumption, and contact is no longer required for response.
-        The work situates us within a world where the protocols of perception have been fundamentally rewritten.
       </p>
       <p class="projdetail-description-kr">
       《Scan 2 Taste》는 QR 코드를 단순한 디지털 도구가 아닌, 시뮬레이션된 감각의 입구로 재구성한다.
-        스테이크 텍스처로 위장된 코드를 통해 관객은 실체 없는 쾌락—먹지 않고도 느끼는 감각—에 접속하게 된다.
-        감각은 실재하지 않지만, 뇌는 그것을 실재로 받아들인다.
-        이 사변적 시스템에서, 포만감은 섭취와 분리되고, 반응은 접촉 없이 발생한다.
-        작품은 감각의 프로토콜이 근본적으로 재편된 세계 속으로 우리를 끌어들인다.
       </p>
     </div>
     <div class="projdetail-skill"></div>
-    </div>    
-    
-    <!-- <div class="projdetail-images">
-        <iframe src="https://www.youtube.com/embed/Isu2pzOr-b0?autoplay=1" frameborder="0" 
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>scan2taste</p>
-    </div> -->
+  </div>    
 
-    <!-- 영상 팝업 전체화면 -->
-      <div id="video-popup" style="
+    <div id="video-popup" style="
         position: fixed;
         top: 0;
         left: 0;
@@ -102,19 +68,11 @@
         justify-content: center;
         align-items: center;
       ">
-        <iframe
-          width="100%"
-          height="100%"
-          src="https://www.youtube.com/embed/hLyo2a9b4sk?autoplay=1&mute=1&loop=1"
-          frameborder="0"
-          allow="autoplay; fullscreen; picture-in-picture"
-          allowfullscreen
-        ></iframe>
+        <div id="youtube-player"></div>
       </div>
   </section>
   
   
-  <!-- Footer -->
   <footer>
     <div id="animated-text-strip">
       <div class="marquee">
@@ -136,6 +94,70 @@
   
 </div>
 
-<script src="../scripts/script.js"></script> <!-- Link to project-specific JS -->
+<script src="../scripts/script.js"></script>
+
+<script>
+    // 1. YouTube IFrame Player API 스크립트를 비동기적으로 로드합니다.
+    var tag = document.createElement('script');
+    tag.src = "https://www.youtube.com/iframe_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+    // (수정됨) ▼▼▼ 여기에 유튜브 링크를 통째로 붙여넣으세요 ▼▼▼
+    const YOUTUBE_URL = 'https://www.youtube.com/watch?v=hLyo2a9b4sk&list=PLylwyQo9y48PyinIdwCAUejDcJpaBlgM0';
+
+    var player;
+    // 2. API 코드가 다운로드되면 이 함수가 자동으로 호출됩니다.
+    function onYouTubeIframeAPIReady() {
+        // (수정됨) 붙여넣은 링크에서 영상 ID와 플레이리스트 ID를 자동으로 추출합니다.
+        let videoId = '';
+        let playlistId = '';
+        try {
+            const url = new URL(YOUTUBE_URL);
+            videoId = url.searchParams.get('v');
+            playlistId = url.searchParams.get('list');
+        } catch (e) {
+            console.error("Invalid YouTube URL:", YOUTUBE_URL);
+            return;
+        }
+
+        const playerOptions = {
+            height: '100%',
+            width: '100%',
+            videoId: videoId,
+            playerVars: {
+                'autoplay': 1,
+                'mute': 0,
+                'loop': 1,
+                'vq': 'hd1080',
+                'controls': 1,
+                'showinfo': 0,
+                'rel': 0,
+                'modestbranding': 1,
+                'playsinline': 1
+            },
+            events: {
+                'onReady': onPlayerReady
+            }
+        };
+
+        // (수정됨) 플레이리스트 ID가 있으면 플레이리스트 옵션을, 없으면 단일 영상 반복 옵션을 사용합니다.
+        if (playlistId) {
+            playerOptions.playerVars.listType = 'playlist';
+            playerOptions.playerVars.list = playlistId;
+        } else {
+            playerOptions.playerVars.playlist = videoId;
+        }
+
+        player = new YT.Player('youtube-player', playerOptions);
+    }
+
+    // 3. 플레이어가 준비되면, 이 함수가 호출되어 영상을 재생합니다.
+    function onPlayerReady(event) {
+        event.target.playVideo();
+        event.target.setPlaybackQuality('hd1080');
+    }
+</script>
+
 </body>
 </html>
